[metadata]
name = mlm
version = 0.1.0
summary = Meeting leaders manager
description-file =
    README.rst
author = Andrey Kurilin
author-email = andr.kurilin@gmail.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    mlm

[entry_points]

console_scripts =
     mlm = mlm.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
